--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div id="modal">
         <div class="modal-content">
             <span class="close-btn" onclick="closeModal()">&times;</span>
-            <img id="modal-img" src="" style="width:100%; border-radius:10px;">
+            <img id="modal-img" src="" style="width:400px; border-radius:10px;">
             <h2 id="modal-title"></h2>
             <p id="modal-desc"></p>
             <a id="whatsapp-link" href="#" target="_blank" class="btn-whatsapp">Consultar por WhatsApp</a>
