--- a/admin.html
+++ b/admin.html
@@ -76,7 +76,7 @@
 
         if (!sessionStorage.getItem('autenticado')) {
             const password = prompt("Introduce la contraseña de administrador:");
-            if (password === "conradop2026") {
+            if (password === "Conradop2026") {
                 sessionStorage.setItem('autenticado', 'true');
             } else {
                 alert("Acceso denegado");
